# chickchirick-game-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake
configs/: engineconfig.json  sdlconfig.json
core/: CMakeLists.txt  main.cpp
core/Allocators/: Allocators.hpp  BlockAlloc.cpp  BlockAlloc.hpp  BlockAllocConf.hpp  StackAlloc.cpp  StackAlloc.hpp
core/Asset/: Asset.hpp
core/Asset/Map/: Map.cpp  Map.hpp
core/Asset/Texture/: Texture.cpp  Texture.hpp
core/AssetManager/: AssetManager.cpp  AssetManager.hpp
core/ConfigManager/: ConfigManager.cpp  ConfigManager.hpp
core/Containers/HashTable/: HashTable.hpp
core/Containers/PropertyTree/: PropertyTree.hpp
core/Containers/RingBuffer/: RingBuffer.cpp  RingBuffer.hpp
core/Containers/Vector/: Vector.hpp
core/EventModule/Event/: Event.cpp  Event.hpp
core/EventModule/EventLoop/: EventLoop.cpp  EventLoop.hpp
core/FileSystem/: FileSystem.cpp  FileSystem.hpp
core/GameLoop/: GameLoop.cpp  GameLoop.hpp
core/GameObject/: GameObject.cpp  GameObject.hpp
core/Includes/: Initializers.hpp  SDLInclude.hpp  tmxlitemodules.hpp
core/InputModule/Command/: Command.cpp  Command.hpp
core/InputModule/Gamepad/: Gamepad.cpp  Gamepad.hpp
core/InputModule/InputDevice/: InputDevice.cpp  InputDevice.hpp
core/InputModule/InputHandler/: InputHandler.cpp  InputHandler.hpp
core/InputModule/Keyboard/: Keyboard.cpp  Keyboard.hpp
core/MemorySystem/: MemorySystem.cpp  MemorySystem.hpp  MemoryUnits.hpp
core/MemoryUnits/: MemoryUnits.hpp
core/SDLModule/: SDLModule.cpp  SDLModule.hpp
core/StringID/: StringID.cpp  StringID.hpp
core/SystemManager/: SystemManager.cpp  SystemManager.hpp
core/Texture/: Texture.hpp
core/Timer/: Timer.cpp  Timer.hpp
core/tests/: BlockAllocTests.hpp  TestRunner.hpp  tests.hpp
dependencies/sdl2/2.0.10/: INSTALL_RECEIPT.json
dependencies/sdl2_image/2.0.5/: INSTALL_RECEIPT.json
dependencies/sdl2_ttf/2.0.15/: INSTALL_RECEIPT.json
dependencies/tmxlite/: Tileset.hpp
tests/: CMakeLists.txt  tests.cpp
tests/cases/: BlockAllocTests.cpp  BlockAllocTests.hpp  MemorySystemTests.cpp  MemoryUnitsTests.cpp  RingBufferTests.cpp  StackAllocTests.cpp  StackAllocTests.hpp  StringIDTests.cpp
