project(tests)

add_executable(
	tests
    tests.cpp
	cases/BlockAllocTests.cpp
	cases/StackAllocTests.cpp
	cases/MemoryUnitsTests.cpp
	cases/StringIDTests.cpp
	cases/MemorySystemTests.cpp
	${CORE_DIR}/Allocators/BlockAlloc.cpp
	${CORE_DIR}/Allocators/StackAlloc.cpp
	${CORE_DIR}/AssetManager/AssetManager.cpp
	${CORE_DIR}/FileSystem/FileSystem.cpp
	${CORE_DIR}/StringID/StringID.cpp
	${CORE_DIR}/SystemManager/SystemManager.cpp
	${CORE_DIR}/MemorySystem/MemorySystem.cpp
	${CORE_DIR}/ConfigManager/ConfigManager.cpp
	${CORE_DIR}/SDLModule/SDLModule.cpp
	${CORE_DIR}/Asset/Map/Map.cpp
	${CORE_DIR}/GameLoop/GameLoop.cpp
	${CORE_DIR}/GameObject/GameObject.cpp
	${CORE_DIR}/InputModule/Command/Command.cpp
	${CORE_DIR}/InputModule/InputHandler/InputHandler.cpp
	${CORE_DIR}/InputModule/Gamepad/Gamepad.cpp
	${CORE_DIR}/EventModule/EventLoop/EventLoop.cpp
	${CORE_DIR}/EventModule/Event/Event.cpp
	${CORE_DIR}/Timer/Timer.cpp
)

target_link_libraries(
	tests
    ${SDL2_LIBRARY}
    ${SDL2_IMAGE_LIBRARY}
    ${SDL2_TTF_LIBRARY}
    ${TMXLITE_LIBRARY}
)

install(TARGETS tests RUNTIME DESTINATION ${BIN_DIR})

include_directories(
	${TEST_DIR}
	${CORE_DIR}
	${CORE_DIR}/Allocators
	${CORE_DIR}/AssetManager
	${CORE_DIR}/Containers/HashTable
	${CORE_DIR}/Containers/Vector
	${CORE_DIR}/Containers/PropertyTree
	${CORE_DIR}/FileSystem
	${CORE_DIR}/Includes
	${CORE_DIR}/StringID
	${CORE_DIR}/SystemManager
	${CORE_DIR}/MemorySystem
	${CORE_DIR}/ConfigManager
	${CORE_DIR}/SDLModule
	${CORE_DIR}/Asset
	${CORE_DIR}/Asset/Texture
	${CORE_DIR}/Asset/Map
	${CORE_DIR}/GameLoop
	${CORE_DIR}/GameObject
	${CORE_DIR}/InputModule/Command
	${CORE_DIR}/InputModule/InputHandler
	${CORE_DIR}/InputModule/InputDevice
	${CORE_DIR}/InputModule/Gamepad
	${CORE_DIR}/EventModule/EventLoop
	${CORE_DIR}/EventModule/Event
	${CORE_DIR}/Timer
	cases
)
